--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,6 +1,18 @@
 .sticky {
   height: 5vh;
-  background-color: white;
   position: sticky;
   top: 0;
+  padding: 10px 0px 20px 0;
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  background-color: #313131;
+  align-items: center;
+}
+
+.navbar a {
+  color: white;
+  justify-content: space-between;
+  margin: 25px;
+  text-decoration: none;
 }
