--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -6,8 +6,10 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  background-color: #313131;
+  background-color: #030f1c;
+  border-bottom: 1px solid white;
   align-items: center;
+  z-index: 3;
 }
 
 .navbar a {
