--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -1,45 +1,105 @@
 .contactContainer {
   border-radius: 5px;
-  background-color: #144272;
-  border: 1px solid white;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  width: 40%;
   align-items: center;
   justify-content: center;
-  height: 40vh;
+  height: 80vh;
+  width: 100%;
+}
+
+form {
+  /* background-color: white; */
+  display: flex;
+  flex-direction: column;
+  padding: 2vw 2vw;
+  width: 25%;
+  max-width: 600px;
+  border-radius: 10px;
+}
+
+form h3 {
+  color: #ffffff;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+
+form input,
+form textarea {
+  border: 0;
+  margin: 10px 0;
+  padding: 10px;
+  outline: none;
+  background-color: #030f1c;
+  font-size: 16px;
+  color: white;
+}
+
+form button {
+  padding: 10px;
+  background-color: #266399;
+  color: white;
+  font-size: 16px;
+  border: 0;
+  outline: none;
+  cursor: pointer;
+  width: 100px;
+  margin: 20px auto 0;
+  border-radius: 30px;
+}
+
+.contactInfo {
+  width: 20%;
 }
 
 .links {
-  align-items: center;
   display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   flex-direction: row;
+  background-color: #ffffff;
+  border-radius: 5px;
+  border: 1px solid rgb(110, 199, 255);
+  height: 7vh;
 }
 
 .links > a > img {
-  width: 30px;
-  margin: 30px 30px 10px 30px;
+  width: 25px;
+  opacity: 55%;
 }
 
 .contactInfo > a {
   width: 25px;
-  height: 25px;
+  /* height: 25px; */
   display: inline-flex;
   flex-direction: row;
   margin: auto;
-  margin-right: 20px;
-  margin-left: 20px;
+  /* margin-right: 20px; */
+  /* margin-left: 20px; */
   margin-top: 10px;
 }
 
 .download-btn {
   align-items: center;
-  background-color: rgb(110, 199, 255);
+  background-color: #2c74b3;
   border-radius: 5px;
   padding: 5px 30px 6px 30px;
   margin: auto;
   text-decoration: none;
   color: white;
   justify-content: center;
+}
+
+.links > a > img:hover {
+  opacity: 100%;
+  scale: 1px;
+}
+
+.download-btn:hover {
+  background-color: #266399;
+}
+
+form > button:hover {
+  background-color: #aa702d;
 }
