--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -1,11 +1,8 @@
 .contactContainer {
-  border-radius: 5px;
   display: flex;
-  flex-direction: column;
-  margin: 0 auto;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
-  height: 80vh;
+  justify-content: space-evenly;
   width: 100%;
 }
 
@@ -13,7 +10,7 @@ form {
   /* background-color: white; */
   display: flex;
   flex-direction: column;
-  padding: 2vw 2vw;
+  padding: 4vw 2vw;
   width: 25%;
   max-width: 600px;
   border-radius: 10px;
@@ -82,9 +79,9 @@ form button {
 
 .download-btn {
   align-items: center;
-  background-color: #2c74b3;
+  background-color: #266399;
   border-radius: 5px;
-  padding: 5px 30px 6px 30px;
+  padding: 5px 25px 6px 25px;
   margin: auto;
   text-decoration: none;
   color: white;
