about-section-design

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -22,6 +22,8 @@ html {
 }
 .intro {
   background: #030f1c;
+  background-image: url("https://www.pngkey.com/png/full/336-3369684_home-web-design-education-website-background.png");
+  background-position: 0%;
 }
 .projects {
   background: #030f1c;
