projects-section-started

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -29,5 +29,6 @@ html {
   background: #030f1c;
 }
 .contact {
+  background-image: url("https://www.pnghq.com/wp-content/uploads/ocean-wave-png-free-images-with-transparent-background-1-68360.png");
   background: #ffffff;
 }
