--- a/src/pages/ProjectsPage/ProjectsPage.css
+++ b/src/pages/ProjectsPage/ProjectsPage.css
@@ -26,6 +26,13 @@
 .techUsed {
   display: flex;
   align-items: center;
+  width: 100%;
+}
+
+.techUsed img {
+  width: 6%;
+  margin: auto;
+  justify-content: space-between;
 }
 
 .left-container {
@@ -36,7 +43,7 @@
   left: 50%;
 }
 
-.container img {
+.middleLogo {
   position: absolute;
   width: 40px;
   border-radius: 50%;
