--- a/src/pages/ProjectsPage/ProjectsPage.css
+++ b/src/pages/ProjectsPage/ProjectsPage.css
@@ -29,6 +29,16 @@
   width: 100%;
 }
 
+.projectLinks {
+  margin: auto;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.projectLinks img {
+  width: 5%;
+}
+
 .techUsed img {
   width: 6%;
   margin: auto;
