--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -48,8 +48,12 @@ form button {
 }
 
 .contactInfo {
-  width: 20%;
+  width: 40%;
   color: black;
+}
+
+.contactInfo img {
+  width: 55%;
 }
 
 .info {
@@ -57,9 +61,8 @@ form button {
 }
 
 .profilePicture {
-  width: 70%;
+  width: 100%;
   margin-bottom: 15px;
-  border-radius: 50%;
 }
 
 .links {
@@ -69,7 +72,6 @@ form button {
   flex-direction: row;
   background-color: #ffffff;
   border-radius: 5px;
-  border: 1px solid #030f1c;
   height: 7vh;
 }
 
