--- a/src/pages/ProjectsPage/ProjectsPage.css
+++ b/src/pages/ProjectsPage/ProjectsPage.css
@@ -59,14 +59,14 @@
   border-radius: 50%;
   right: -20px;
   top: 32px;
-  z-index: 10;
+  z-index: 100;
 }
 
 .right-container img {
   left: -20px;
 }
 
-.timeline::after {
+/* .timeline::after {
   content: "";
   position: absolute;
   width: 6px;
@@ -76,7 +76,7 @@
   left: 50%;
   margin-left: -3px;
   z-index: 1;
-}
+} */
 
 .text-box h2 {
   font-weight: 400;
