--- a/src/pages/PhotographyPage/PhotographyPage.css
+++ b/src/pages/PhotographyPage/PhotographyPage.css
@@ -23,35 +23,46 @@
 .rightContainer img {
   width: 35%;
   padding-bottom: 6%;
-  padding-left: 3%;
-  margin: 0%;
+  padding-left: 8%;
+  /* margin: auto; */
 }
 
 .bottomSection {
   padding-left: 7%;
-  border: 1px solid yellow;
+  /* border: 1px solid yellow; */
   width: 75%;
   margin: auto;
   display: inline-flex;
 }
 
 .leftContainer-2 {
-  border: 1px solid cyan;
-  width: 70%;
+  /* border: 1px solid cyan; */
+  width: 61%;
+  margin-right: 1%;
 }
 
 .leftContainer-2 img {
-  width: 35%;
+  width: 40%;
+  padding-bottom: 6%;
+  margin-right: 10%;
 }
 
 .rightContainer-2 {
-  border: 1px solid rgb(60, 182, 32);
+  /* border: 1px solid rgb(60, 182, 32); */
   width: 25%;
 }
 
 .rightContainer-2 img {
   width: 100%;
-  padding-bottom: 6%;
-  padding-left: 3%;
-  margin: 0%;
+  margin-left: 15%;
+}
+
+.photography img {
+  filter: grayscale(100%);
+}
+
+.photography img:hover {
+  cursor: pointer;
+  transition: filter 0.8s ease;
+  filter: grayscale(0%);
 }
