--- a/src/pages/PhotographyPage/PhotographyPage.css
+++ b/src/pages/PhotographyPage/PhotographyPage.css
@@ -1,6 +1,46 @@
+/* Add styles for the modal container */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  /* background-color: white; */
+  padding: 10px;
+  border-radius: 8px;
+  /* box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); */
+  max-width: 70%;
+  max-height: 80vh;
+}
+
+.modal-content img {
+  max-width: 50%;
+  max-height: 50%;
+}
+
+.modal-content .close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  font-size: 20px;
+  color: #888;
+}
+
+.modal-content .close-button:hover {
+  color: #000;
+}
+
 .topSection {
   padding-left: 7%;
-  /* border: 1px solid yellow; */
   width: 75%;
   margin: auto;
   display: inline-flex;
