--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -6,7 +6,7 @@
   display: flex;
   justify-content: flex-end;
   width: 100%;
-  background-color: #030f1c;
+  background: #080808;
   align-items: center;
   z-index: 13;
 }
