--- a/src/pages/PhotographyPage/PhotographyPage.css
+++ b/src/pages/PhotographyPage/PhotographyPage.css
@@ -22,7 +22,9 @@
 }
 
 .modal-content img {
-  max-width: 50%;
+  border: 3px solid white;
+  border-radius: 5px;
+  max-width: 40%;
   max-height: 50%;
 }
 
