--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,46 +1,13 @@
 .homeContainer {
-  width: 90%;
+  width: 100%;
   margin: auto;
   /* border: 1px solid aqua; */
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .myName {
-  display: inline-flex;
-  /* width: 80%; */
-}
-
-.last {
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-color: white;
-  -webkit-text-stroke-width: 1px;
-  margin-left: 10px;
-}
-
-.first,
-.last {
-  font-size: 124px;
-  font-family: "Righteous", cursive;
-}
-
-.profilePicture {
-  width: 35%;
-  border-radius: 2%;
-}
-
-.resumeLink {
-  text-decoration: none;
-  padding: 8px 15px 9px 15px;
-  background-color: #266399;
-  color: white;
-  font-size: 16px;
-  border: 0;
-  outline: none;
-  cursor: pointer;
-  width: 100px;
-  margin: 20px auto 0;
-  border-radius: 30px;
-}
-
-.resumeLink:hover {
-  background-color: #c97514;
+  float: left;
+  width: 25%;
+  /* border: 1px solid red; */
 }
