--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -8,7 +8,6 @@
 }
 
 form {
-  /* background-color: white; */
   display: flex;
   flex-direction: column;
   padding: 4vw 2vw;
@@ -34,7 +33,7 @@ form textarea {
   border-radius: 3px;
 }
 
-form button {
+#formButton {
   padding: 10px;
   background-color: #2fb495;
   color: white;
@@ -97,6 +96,6 @@ form button {
   transform: scale(1.1);
 }
 
-form > button:hover {
+#formButton:hover {
   background-color: #278e76;
 }
