--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -7,6 +7,37 @@
   padding-top: 25px;
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.8); */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modalContent {
+  color: black;
+  background-color: white;
+  padding: 25px;
+  border-radius: 8px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 1);
+  max-width: 15%;
+  max-height: 80vh;
+}
+
+.modalContent h1 {
+  font-weight: 400;
+}
+
+.checkMark {
+  width: 12%;
+}
+
 form {
   display: flex;
   flex-direction: column;
@@ -22,14 +53,22 @@ form h3 {
   margin-bottom: 20px;
 }
 
-form input,
-form textarea {
+form input {
   border: 0;
   margin: 10px 0;
   padding: 10px;
   outline: none;
   background-color: #e8e8e8;
   /* font-size: 16px; */
+  border-radius: 3px;
+}
+
+form textarea {
+  padding: 10px;
+  border: 0;
+  margin: 10px 0;
+  outline: none;
+  background-color: #e8e8e8;
   border-radius: 3px;
 }
 
