--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -19,7 +19,9 @@ html {
 
 .about {
   background: white;
+  background-image: url("https://i.imgur.com/P4NOeC3.png");
   background-position: bottom;
+  background-size: cover;
 }
 .projects {
   background: #080808;
@@ -29,6 +31,7 @@ html {
 }
 
 .contact {
-  /* background-image: url("https://www.pnghq.com/wp-content/uploads/ocean-wave-png-free-images-with-transparent-background-1-68360.png"); */
-  background: #ffffff;
+  background-image: url("https://i.imgur.com/P4NOeC3.png");
+  background-position: bottom;
+  background-size: cover;
 }
