--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -64,6 +64,7 @@ form input {
 }
 
 form textarea {
+  resize: none;
   padding: 10px;
   border: 0;
   margin: 10px 0;
@@ -101,6 +102,7 @@ form textarea {
 .profilePicture {
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 5px;
 }
 
 .links {
