--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -17,3 +17,13 @@
   margin: 25px;
   text-decoration: none;
 }
+
+.logo {
+  width: 30px;
+  margin-right: auto;
+  margin-left: 20px;
+}
+
+.logo:hover {
+  cursor: pointer;
+}
