color matching and input bug fixes

--- a/src/pages/ContactPage/ContactPage.css
+++ b/src/pages/ContactPage/ContactPage.css
@@ -53,6 +53,12 @@ form h3 {
   margin-bottom: 20px;
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
 form input {
   border: 0;
   margin: 10px 0;
@@ -139,4 +145,12 @@ form textarea {
 
 #formButton:hover {
   background-color: #278e76;
+}
+
+form input:hover {
+  background-color: #e2e2e2;
+}
+
+form textarea:hover {
+  background-color: #e2e2e2;
 }
