--- a/src/pages/ProjectsPage/ProjectsPage.css
+++ b/src/pages/ProjectsPage/ProjectsPage.css
@@ -97,11 +97,40 @@
   z-index: 1;
   border-top: 15px solid transparent;
   border-bottom: 15px solid transparent;
-  border-bottom: 15px solid red;
   right: -15px;
 }
 
 .projectLinks img:hover {
   opacity: 100%;
   transform: scale(1.1);
+}
+
+@media only screen and (max-width: 980px) {
+  .timeline {
+    width: 100%;
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .container {
+    width: 100%;
+    /* display: inline; */
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .left-container,
+  .right-container {
+    margin: auto;
+    margin-bottom: 15px;
+    width: 100%;
+    left: 0;
+    right: 0;
+  }
+}
+
+@media only screen and (max-width: 980px) {
+  .middleLogo {
+    display: none;
+  }
 }
